--- a/isoenum_webgui/static/custom/css/main.css
+++ b/isoenum_webgui/static/custom/css/main.css
@@ -8,6 +8,14 @@ h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
 
+tr {
+  cursor: default;
+}
+
+.highlight {
+  background: lightgray;
+}
+
 .bg-steel {
   background-color: #5f788a;
 }
