--- a/isoenum_webgui/templates/layout.html
+++ b/isoenum_webgui/templates/layout.html
@@ -38,6 +38,16 @@
 
     <main role="main" class="container">
 
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
         {% block content %}{% endblock %}
     
     </main>
