Replaced go back button form.

--- a/isoenum_webgui/templates/nmrtable.html
+++ b/isoenum_webgui/templates/nmrtable.html
@@ -7,9 +7,7 @@
     <h4>Step 4. Select relevant NMR-specific InChI.</h4>
 
     <div class="btn-group">
-        <form id="update-form" method="post" action="">
-            <input class="btn btn-info" id="go-back-button" type="submit" value="Go back" name="go-back-button">
-        </form>
+        <a href="{{ url_for("table") }}" class="btn btn-info" id="go-back-button">Go back</a>
     </div>
 
     <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
