--- a/isoenum_webgui/templates/table.html
+++ b/isoenum_webgui/templates/table.html
@@ -89,8 +89,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="{{ url_for('static', filename='TableToJson.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='ReloadCachedImg.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='custom/js/TableToJson.js') }}"></script>
 
 <script>
 
