Added sortable js to layout.

--- a/isoenum_webgui/templates/layout.html
+++ b/isoenum_webgui/templates/layout.html
@@ -36,6 +36,7 @@
     <script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='jquery/jquery-2.2.3.min.js') }}"></script>
     <script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='custom/js/TableToJson.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='sortable/js/sortable.min.js') }}"></script>
 
     <main role="main" class="container">
 
