--- a/isoenum_webgui/templates/home.html
+++ b/isoenum_webgui/templates/home.html
@@ -21,7 +21,9 @@
                     <label class="custom-file-label">Choose file</label>
                 </div>
                 <div class="input-group-append">
-                    <input class="btn btn-success" type="submit" value="Process" name="from-file" id="process-button">
+                    <button class="btn btn-success" type="submit" id="process-button">
+                        Process
+                    </button>
                 </div>
             </div>
         </form>
