--- a/isoenum_webgui/templates/table.html
+++ b/isoenum_webgui/templates/table.html
@@ -21,7 +21,9 @@
                     <option value="1D-CHSQC">1D-CHSQC</option>
                 </select>
                 <input id="nmr-table-data" type="hidden" name="nmr-inchi-table-data" value="">
-                <input class="btn btn-success" id="generate-nmr-button" type="submit" value="Generate NMR specific InChI">
+                <button class="btn btn-success" type="submit" id="generate-nmr-button">
+                    Generate NMR specific InChI
+                </button>
             </form>
 
             <button id="save-button" type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Save</button>
