Updated table template.

--- a/isoenum_webgui/templates/table.html
+++ b/isoenum_webgui/templates/table.html
@@ -5,6 +5,12 @@
 
     <div class="row">
         <h4>Step 2. Update ISO and CHG columns to generate representative InChI.</h4>
+
+        <ul>
+            <li>Use <strong class="text-monospace highlight">isotope:atom:atom_number</strong> format to specify <strong class="text-monospace highlight">ISO</strong> properties.</li>
+            <li>Use <strong class="text-monospace highlight">atom:atom_number:charge</strong> format to specify <strong class="text-monospace highlight">CHG</strong> properties.</li>
+        </ul>
+
     </div>
 
     <br>
