--- a/isoenum_webgui/templates/layout.html
+++ b/isoenum_webgui/templates/layout.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" charset="utf8" src="{{ url_for('static', filename='bootstrap/js/bootstrap.bundle.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='custom/js/TableToJson.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='sortable/js/sortable.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='custom/js/general.js') }}"></script>
 
     <main role="main" class="container">
 
