--- a/isoenum_webgui/templates/table.html
+++ b/isoenum_webgui/templates/table.html
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="btn-group">
             <form id="generate-nmr-form" class="btn-group" method=post action="">
-                <select class="btn btn-primary" id="select-nmr-experiment-button" name="select-nmr-experiment" title="Select NMR experiment">
+                <select class="custom-select" id="select-nmr-experiment-button" name="select-nmr-experiment" title="Select NMR experiment">
                     <option value="1D-1H">1D-1H</option>
                     <option value="1D-CHSQC">1D-CHSQC</option>
                 </select>
