--- a/isoenum_webgui/templates/layout.html
+++ b/isoenum_webgui/templates/layout.html
@@ -26,9 +26,14 @@
          <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
              <div class="container">
                  <a class="navbar-brand mr-4" href="/">Isotopic Enumerator</a>
-                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-                     <span class="navbar-toggler-icon"></span>
-                 </button>
+
+                 <!-- Navbar Right Side -->
+                 <div class="navbar-nav">
+                     <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+                     <a class="nav-item nav-link" href="https://github.com/MoseleyBioinformaticsLab/isoenum-webgui">GitHub</a>
+                     <a class="nav-item nav-link" href="https://isoenum-webgui.readthedocs.io">Docs</a>
+                 </div>
+
              </div>
          </nav>
     </header>
